# lib/db/src/schema/index.ts
@@ -1,1 +1,2 @@
 export * from "./parts";
+export * from "./settings";
